--- a/styles/login.css
+++ b/styles/login.css
@@ -1,5 +1,74 @@
 main {
   display: flex;
+  flex-direction: row;
+}
+
+.user-login, .internal-login {
+  height: calc(100vh - 4rem);
+  flex-grow: 1;
+}
+
+.user-login form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
+  justify-content: center;
+}
+
+.agent-login form {
+  height: calc(50vh - 4rem);
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
+  justify-content: center;
+}
+
+.admin-login form {
+  height: calc(50vh - 4rem);
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
+  justify-content: center;
+}
+
+.internal-login {
+  display: flex;
+  flex-direction: column;
+  height: 50%;
+  flex-grow: 1;
+}
+
+input[type=email], input[type=password] {
+  padding: 8px;
+  font-size: 1rem;
+  background-color: #eee;
+  border-color: hsl(220, 100%, 50%);
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 50px;
+}
+input[type=email]:focus, input[type=password]:focus {
+  outline: none;
+}
+
+input[type=submit] {
+  padding: 8px;
+  font-size: 1rem;
+  background-color: #eee;
+  border-color: hsl(220, 100%, 50%);
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 50px;
+  cursor: pointer;
+  transition-duration: 200ms;
+  transition-timing-function: ease-in-out;
+}
+input[type=submit]:hover {
+  background-color: hsl(220, 100%, 50%);
+  color: #eee;
 }
 
 /*# sourceMappingURL=login.css.map */
