--- a/styles/Nav.css
+++ b/styles/Nav.css
@@ -1,7 +1,7 @@
 nav {
   width: 100%;
   height: 4rem;
-  background-color: hsl(220, 100%, 50%);
+  background-color: #0074ff;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -15,7 +15,7 @@ nav span:last-child {
   border-right: 2px #eee dashed;
 }
 nav a, nav a:hover, nav a:visited {
-  color: hsl(0, 0%, 100%);
+  color: #fff;
   text-decoration: none;
   display: inline-block;
   width: 100%;
@@ -23,7 +23,7 @@ nav a, nav a:hover, nav a:visited {
   padding: 0.75rem 2rem;
 }
 nav a:hover {
-  background-color: hsl(220, 100%, 40%);
+  background-color: #0063d9;
 }
 
-/*# sourceMappingURL=Nav.css.map */
+/*# sourceMappingURL=nav.css.map */
