--- a/styles/global.scss
+++ b/styles/global.scss
@@ -2,32 +2,33 @@
 @import url('https://fonts.googleapis.com/css2?family=Encode+Sans+Semi+Expanded:wght@200;300;400;600&family=Fira+Mono:wght@400;500;700&display=swap');
 
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 body {
-  margin: 0;
-  font-family: 'Encode Sans Semi Expanded', sans-serif;
-  font-weight: 300;
+	margin: 0;
+	font-family: 'Encode Sans Semi Expanded', sans-serif;
+	font-weight: 300;
+	background-color: #eee;
 }
 
 main {
-  max-width: 70rem;
-  margin-inline: auto;
-  height: calc(100vh - 4rem);
+	max-width: 74rem;
+	margin-inline: auto;
+	height: calc(100vh - 4rem);
 }
 
 
 h2 {
-  font-family: 'Fira Mono', monospace;
-  font-weight: 400;
-  text-align: center;
-  margin: 0;
-  padding: 1rem;
+	font-family: 'Fira Mono', monospace;
+	font-weight: 400;
+	text-align: center;
+	margin: 0;
+	padding: 1rem;
 }
 
 
 p {
-  text-align: center;
+	text-align: center;
 }
 
