--- a/styles/login.scss
+++ b/styles/login.scss
@@ -3,7 +3,7 @@ main {
 	flex-direction: row;
 }
 
-.user-login, .internal-login {
+.user-login {
 	height: calc(100vh - 4rem);
 	flex-grow: 1;
 }
@@ -16,39 +16,12 @@ main {
 	justify-content: center;
 }
 
-.agent-login form {
-	height: calc(50vh - 4rem);
-	display: flex;
-	flex-direction: column;
-	gap: 1rem;
-	align-items: center;
-	justify-content: center;
-
-}
-
-.admin-login form {
-	height: calc(50vh - 4rem);
-	display: flex;
-	flex-direction: column;
-	gap: 1rem;
-	align-items: center;
-	justify-content: center;
-
-}
-
-.internal-login {
-	display: flex;
-	flex-direction: column;
-	height: 50%;
-	flex-grow: 1;
-}
-
 input[type="email"], input[type="password"] {
 
 	padding: 8px;
 	font-size: 1rem;
 	background-color: #eee;
-	border-color: hsl(220, 100, 50);
+	border-color: #0055FF;
 	border-style: solid;
 	border-width: 1px;
 	border-radius: 50px;
@@ -62,7 +35,7 @@ input[type="submit"] {
 	padding: 8px;
 	font-size: 1rem;
 	background-color: #eee;
-	border-color: hsl(220, 100, 50);
+	border-color: 	#0055FF;
 	border-style: solid;
 	border-width: 1px;
 	border-radius: 50px;
@@ -71,7 +44,7 @@ input[type="submit"] {
 	transition-timing-function: ease-in-out;
 
 	&:hover {
-		background-color: hsl(220, 100, 50);
+		background-color: 	#0055FF;
 		color: #eee;
 	}
 }
