--- a/styles/nav.scss
+++ b/styles/nav.scss
@@ -1,7 +1,7 @@
 nav {
 	width: 100%;
 	height: 4rem;
-	background-color: hsl(220, 100, 50);
+	background-color: #0074ff;
 
 	display: flex;
 	flex-direction: row;
@@ -19,7 +19,7 @@ nav {
 
 
 	a, a:hover, a:visited {
-		color: hsl(0, 0, 100);
+		color: 	#fff;
 		text-decoration: none;
 		display: inline-block;
 		width: 100%;
@@ -28,6 +28,6 @@ nav {
 	}
 
 	a:hover {
-		background-color: hsl(220, 100, 40);
+		background-color: #0063d9;
 	}
 }
