--- a/styles/clientArea.scss
+++ b/styles/clientArea.scss
@@ -1,4 +1,3 @@
-// aktywne ubezpieczenia
 // moje dane + zmiana danych
 
 main {
@@ -27,8 +26,8 @@ main {
 			padding: .5rem;
 		}
 	}
+}
 
-	.myData {
-		background-color: blue;
-	}
+.bold {
+	font-weight: 600;
 }
