--- a/styles/dbManager.css
+++ b/styles/dbManager.css
@@ -1,16 +1,23 @@
 main {
-  display: flex;
   height: calc(100vh - 4rem);
-  width: 100%;
-}
-main section {
   width: 100%;
   display: flex;
   flex-direction: column;
   gap: 1rem;
   align-items: center;
   justify-content: center;
-  text-align: center;
 }
 
-/*# sourceMappingURL=index.css.map */
+form {
+  display: flex;
+  flex-direction: row;
+}
+form input {
+  margin-inline: 4px;
+}
+
+.bold {
+  font-weight: 600;
+}
+
+/*# sourceMappingURL=dbManager.css.map */
