--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,1 +1,17 @@
+main {
+	display: flex;
+	height: calc(100vh - 4rem);
 
+	width: 100%;
+
+	section {
+		width: 100%;
+
+		display: flex;
+		flex-direction: column;
+		gap: 1rem;
+		align-items: center;
+		justify-content: center;
+		text-align: center;
+	}
+}
