--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,17 +1,40 @@
 main {
 	display: flex;
+	flex-direction: column;
 	height: calc(100vh - 4rem);
 
 	width: 100%;
 
 	section {
 		width: 100%;
-
+		height: 50%;
 		display: flex;
 		flex-direction: column;
 		gap: 1rem;
 		align-items: center;
 		justify-content: center;
 		text-align: center;
+
+		img {
+			height: 100%;
+			aspect-ratio: 1000 / 667;
+		}
 	}
+}
+h2 {
+	padding: 0;
+	user-select: none;
+}
+h3 {
+	margin: 0;
+}
+
+a, a:hover, a:visited {
+	color: 	#000;
+	text-decoration: underline;
+	display: inline-block;
+}
+
+a:hover {
+	color: #0063d9;
 }
