--- a/styles/nav.scss
+++ b/styles/nav.scss
@@ -9,11 +9,11 @@ nav {
 	align-items: center;
 
 	span {
-		border-left: 2px #eee dashed;
+		border-left: 2px #59a5ff dashed;
 		row-gap: 1rem;
 
 		&:last-child {
-			border-right: 2px #eee dashed;
+			border-right: 2px #59a5ff dashed;
 		}
 	}
 
